--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			html {
 				tranform: rotate(-90deg);
 				tranform-origin: left top;
-				overflow: hidden;
+				overflow-x: hidden;
 				position: absolute;
 				top: 100%;
 				left: 0;
