--- a/index.html
+++ b/index.html
@@ -21,18 +21,6 @@
 
     <!-- All margins and padding must be zero for the canvas to fill the screen. -->
 	<style type="text/css">
-		@media screen and (orientation: portrait) {
-			html {
-				tranform: rotate(-90deg);
-				tranform-origin: left top;
-				overflow-x: hidden;
-				position: absolute;
-				top: 100%;
-				left: 0;
-				width: 100vh;
-				height: 100vw;
-			}
-		}
 		* {
 			padding: 0;
 			margin: 0;
@@ -63,7 +51,7 @@
 		// Check for running exported on file protocol
 		if (window.location.protocol.substr(0, 4) === "file")
 		{
-			alert("Have Fun :D");
+			alert("Exported games won't work until you upload them. (When running on the file:/// protocol, browsers block many features from working for security reasons.)");
 		}
 	})();
 	</script>
