--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
 
     <!-- All margins and padding must be zero for the canvas to fill the screen. -->
 	<style type="text/css">
+		@media screen and (orientation: portrait) {
+			html {
+				tranform: rotate(-90deg);
+				tranform-origin: left top;
+				overflow-x: hidden;
+				position: absolute;
+				top: 100%;
+				left: 0;
+				width: 100vh;
+				height: 100vw;
+			}
+		}
 		* {
 			padding: 0;
 			margin: 0;
